--- a/postgresql/traduzione/Makefile
+++ b/postgresql/traduzione/Makefile
@@ -43,7 +43,7 @@ index.html: $(src)
 	cp ../stylesheets/*.css $(BASEDIR)/$(HTM_OUTPUT)/stylesheets
 
 	[ -d $(BASEDIR)/$(HTM_OUTPUT)/images ] || mkdir $(BASEDIR)/$(HTM_OUTPUT)/images
-	cp img/*.png $(BASEDIR)/$(HTM_OUTPUT)/images
+	cp ../stylesheets/img/*.png $(BASEDIR)/$(HTM_OUTPUT)/images
 	cd $(BASEDIR)/$(HTM_OUTPUT)/; sed -i -e "s@../stylesheets@stylesheets@g" *.html
 	cd $(BASEDIR)/$(HTM_OUTPUT)/; sed -i -e "s@../images@images@g" *.html
 
@@ -75,7 +75,7 @@ webhtml: $(src)
 	cp ../stylesheets/*.css $(BASEDIR)/$(WEB_OUTPUT)/stylesheets
 
 	[ -d $(BASEDIR)/$(WEB_OUTPUT)/images ] || mkdir $(BASEDIR)/$(WEB_OUTPUT)/images
-	cp img/*.png $(BASEDIR)/$(WEB_OUTPUT)/images
+	cp ../stylesheets/img/*.png $(BASEDIR)/$(WEB_OUTPUT)/images
 	cd $(BASEDIR)/$(WEB_OUTPUT)/; sed -i -e "s@../stylesheets@stylesheets@g" *.html
 	cd $(BASEDIR)/$(WEB_OUTPUT)/; sed -i -e "s@../images@images@g" *.html
 	cd $(BASEDIR)/$(WEB_OUTPUT)/; sed -i -e 's@border="1"@border="0"@g' *.html
