--- a/postgresql/stylesheets/quickpg-pdf.xsl.in
+++ b/postgresql/stylesheets/quickpg-pdf.xsl.in
@@ -4,25 +4,31 @@
                 xmlns:fo="http://www.w3.org/1999/XSL/Format"
                 version="1.0">
     <!-- We use FO and FOP as the processor -->
-    <!-- Faire un lien /opt/docbook-xsl/ vers votre version -->
-  <xsl:import href="/opt/docbook-xsl/fo/docbook.xsl"/>
+  <xsl:import href="@XSLROOTDIR@/fo/docbook.xsl"/>
   <xsl:param name="fop.extensions" select="1"/>
   <xsl:param name="draft.mode" select="'no'"/>
 
     <!-- Including our others customized templates -->
   <xsl:include href="pdf/pg-index.xsl"/>
-  <xsl:include href="pdf/pg-pagesetup.xsl"/>
+  <xsl:include href="pdf/quickpg-pagesetup.xsl"/>
   <xsl:include href="pdf/pg-sections.xsl"/>
   <xsl:include href="pdf/pg-admon.xsl"/>
   <xsl:include href="pdf/pg-mixed.xsl"/>
   <xsl:include href="pdf/pg-xref.xsl"/>
 
     <!-- Standart paper size -->
-  <xsl:param name="paper.type" select="'A4'"/>
+  <xsl:param name= "page.height">6.875in</xsl:param>
+  <xsl:param name= "page.width">4.25in</xsl:param>
+  <!--<xsl:param name="paper.type" select="'A6'"/>-->
+  <xsl:param name= "page.margin.top">0.5cm</xsl:param>
+  <xsl:param name="body.margin.top">0.8cm</xsl:param>
+  <xsl:param name= "page.margin.bottom">0.5cm</xsl:param>
+  <xsl:param name="body.margin.bottom">0.8cm</xsl:param>
+  <xsl:param name="refentry.pagebreak">0</xsl:param>
 
     <!-- Including callout images -->
   <xsl:param name="callout.graphics.path"
-        select="'/opt/docbook-xsl/images/callouts/'"/>
+        select="'@XSLROOTDIR@/images/callouts/'"/>
 
     <!-- Wrapping -->
   <xsl:attribute-set name="monospace.verbatim.properties">
@@ -35,8 +41,8 @@
   <xsl:param name="alignment">justify</xsl:param>
 
     <!-- Font size -->
-  <xsl:param name="body.font.master">8</xsl:param>
-  <xsl:param name="body.font.size">10pt</xsl:param>
+  <xsl:param name="body.font.master">4</xsl:param>
+  <xsl:param name="body.font.size">6pt</xsl:param>
 
     <!-- TOC stuff -->
   <xsl:param name="generate.toc">
@@ -52,5 +58,6 @@
 
     <!-- Prevent duplicate e-mails in the Acknowledgments pages-->
   <xsl:param name="ulink.show" select="0"/>
+  <xsl:param name="ulink.footnotes" select="0"/>
 
 </xsl:stylesheet>
