--- a/postgresql/stylesheets/pg-chm.xsl.in
+++ b/postgresql/stylesheets/pg-chm.xsl.in
@@ -15,7 +15,7 @@
      distribution (especially on JavaHelp code) from Norman Walsh.
 
      ******************************************************************** -->
-  <xsl:import href="/opt/docbook-xsl/htmlhelp/htmlhelp.xsl"/>
+  <xsl:import href="@XSLROOTDIR@/htmlhelp/htmlhelp.xsl"/>
   <!--
   <xsl:import href="E:/Docbook/xsl/htmlhelp/htmlhelp.xsl"/>
   -->
