--- a/postgresql/stylesheets/pg-chunked-web.xsl.in
+++ b/postgresql/stylesheets/pg-chunked-web.xsl.in
@@ -5,9 +5,9 @@
                 version="1.0">
 
   <xsl:import href="pg-chunked2-web.xsl"/>
-  <xsl:import href="/opt/local/share/xsl/docbook-xsl/xhtml/chunk-common.xsl"/>
+  <xsl:import href="@XSLROOTDIR@/xhtml/chunk-common.xsl"/>
   <xsl:import href="pg-chunk-common.xsl"/>
-  <xsl:import href="/opt/local/share/xsl/docbook-xsl/xhtml/manifest.xsl"/>
+  <xsl:import href="@XSLROOTDIR@/xhtml/manifest.xsl"/>
 
 
     <!--  From the original chunk.xsl file:
@@ -26,7 +26,7 @@
 
     Voila! (Man I hope we can do this better in XSLT 2.0)  -->
 
-  <xsl:import href="/opt/local/share/xsl/docbook-xsl/xhtml/profile-chunk-code.xsl"/>
+  <xsl:import href="@XSLROOTDIR@/xhtml/profile-chunk-code.xsl"/>
 
     <!-- Including our others customized chunks templates -->
   <xsl:include href="xhtml/pg-legalnotice.xsl"/>
