--- a/postgresql/traduzione/Makefile
+++ b/postgresql/traduzione/Makefile
@@ -1,4 +1,4 @@
-# Ultima modifica
+#Ultima modifica
 #   il	$Date$
 #   di	$Author$
 #   revisione	$Revision$
@@ -12,8 +12,8 @@ $(shell test -z "$VERSION" && echo "Non riesco a determinare la versione di Post
 include ../Makefile.config
 
 HTM_OUTPUT := pgsql-$(VER)-it
-WEB_OUTPUT := web-it
-WEBTEST_OUTPUT := web-it-TEST
+WEB_OUTPUT := web-$(VER)-it
+WEBTEST_OUTPUT := web-$(VER)-it-TEST 
 TGZ_OUTPUT := pg$(MAJORVER).tar.gz
 ZIP_OUTPUT := pg$(MAJORVER).zip
 PDF_OUTPUT := pg$(MAJORVER).pdf
@@ -129,6 +129,22 @@ $(PDF_OUTPUT): $(src)
 	sed -i -e "s/inherit/all/" $(BASEDIR)/pg-pdf.fo
 	fop.sh $(BASEDIR)/pg-pdf.fo $(BASEDIR)/$(HTM_OUTPUT)/$(PDF_OUTPUT)
 	rm $(BASEDIR)/pg-pdf.xml $(BASEDIR)/pg-pdf.fo
+
+pdftest: $(PDF_OUTPUT)
+$(PDF_OUTPUT): $(src)
+	[ -d $(BASEDIR)/$(HTM_OUTPUT) ] || mkdir -p $(BASEDIR)/$(HTM_OUTPUT)
+	xsltproc --xinclude --nonet --stringparam profile.condition pdf \
+        -stringparam  profile.attribute  "standalone" -stringparam  profile.value  "no" \
+		--output $(BASEDIR)/pg-pdf.xml ../stylesheets/pg-profile.xsl test.xml
+	xsltproc --nonet \
+        --output $(BASEDIR)/pg-pdf.fo \
+        --stringparam fop1.extensions 1 \
+        ../stylesheets/pg-pdf.xsl \
+		$(BASEDIR)/pg-pdf.xml
+	sed -i -e "s/inherit/all/" $(BASEDIR)/pg-pdf.fo
+	fop $(BASEDIR)/pg-pdf.fo $(BASEDIR)/$(HTM_OUTPUT)/$(PDF_OUTPUT)
+	rm $(BASEDIR)/pg-pdf.xml $(BASEDIR)/pg-pdf.fo
+    
 
 quickpdf: $(QUICKPDF_OUTPUT)
 $(QUICKPDF_OUTPUT): $(src)
