Aggiunto Google Analytics

--- a/postgresql/traduzione/Makefile
+++ b/postgresql/traduzione/Makefile
@@ -91,7 +91,7 @@ webhtml: $(src)
 	  true; \
 	  sed -i -e "s@text/html@application/xhtml+xml@g" $$filename; \
 	done;
-	cd $(BASEDIR)/$(WEB_OUTPUT)/; sed -i -e "s@</body>@</body><script type=\"text/javascript\">var gaJsHost = ((\"https:\" == document.location.protocol) ? \"https://ssl.\" : \"http://www.\"); document.write(unescape(\"%3Cscript src='\" + gaJsHost + \"google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E\")); </script> <script type=\"text/javascript\"> var pageTracker = _gat._getTracker(\"UA-140513-1\"); pageTracker._initData(); pageTracker._trackPageview(); </script>@g" *.html
+	cd $(BASEDIR)/$(WEB_OUTPUT)/; sed -i -e "s@</head>@</head><script type=\"text/javascript\"> var _gaq = _gaq || []; _gaq.push(['_setAccount', 'UA-11269384-3']); _gaq.push(['_trackPageview']); (function() { var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true; ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js'; var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s); })(); </script>@g" *.html
 
 webtest: $(srctest)
 	[ -d $(BASEDIR)/$(WEBTEST_OUTPUT) ] || mkdir -p $(BASEDIR)/$(WEBTEST_OUTPUT)
@@ -116,7 +116,7 @@ webtest: $(srctest)
 #	  true; \
 #	  sed -i -e "s@text/html@application/xhtml+xml@g" $$filename; \
 #	done;
-	cd $(BASEDIR)/$(WEBTEST_OUTPUT)/; sed -i -e "s@</body>@</body><script type=\"text/javascript\">var gaJsHost = ((\"https:\" == document.location.protocol) ? \"https://ssl.\" : \"http://www.\"); document.write(unescape(\"%3Cscript src='\" + gaJsHost + \"google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E\")); </script> <script type=\"text/javascript\"> var pageTracker = _gat._getTracker(\"UA-140513-1\"); pageTracker._initData(); pageTracker._trackPageview(); </script>@g" *.html
+	cd $(BASEDIR)/$(WEBTEST_OUTPUT)/; sed -i -e "s@</head>@</head><script type=\"text/javascript\"> var _gaq = _gaq || []; _gaq.push(['_setAccount', 'UA-11269384-3']); _gaq.push(['_trackPageview']); (function() { var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true; ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js'; var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s); })(); </script>@g" *.html
 
 pdf: $(PDF_OUTPUT)
 $(PDF_OUTPUT): $(src)
