Aggiunto Google Analytics (corretto /head)

--- a/postgresql/traduzione/Makefile
+++ b/postgresql/traduzione/Makefile
@@ -116,7 +116,7 @@ webtest: $(srctest)
 #	  true; \
 #	  sed -i -e "s@text/html@application/xhtml+xml@g" $$filename; \
 #	done;
-	cd $(BASEDIR)/$(WEBTEST_OUTPUT)/; sed -i -e "s@</head>@</head><script type=\"text/javascript\"> var _gaq = _gaq || []; _gaq.push(['_setAccount', 'UA-11269384-3']); _gaq.push(['_trackPageview']); (function() { var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true; ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js'; var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s); })(); </script>@g" *.html
+	cd $(BASEDIR)/$(WEBTEST_OUTPUT)/; sed -i -e "s@</head>@<script type=\"text/javascript\"> var _gaq = _gaq || []; _gaq.push(['_setAccount', 'UA-11269384-3']); _gaq.push(['_trackPageview']); (function() { var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true; ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js'; var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s); })(); </script></head>@g" *.html
 
 pdf: $(PDF_OUTPUT)
 $(PDF_OUTPUT): $(src)
